# hypervisor

./: .clang-format  .gitignore  CMakeSettings.json  脚本.txt
cmake/depend/: FindWdk.cmake
example/default/: CMakeLists.txt
example/default/include/: map_page_flags.hpp  page_1g_t.hpp  page_2m_t.hpp  page_4k_t.hpp  pause.hpp
example/default/src/: dispatch_bootstrap.hpp  lock_guard_t.hpp  main.cpp  page_pool_t.hpp  pp_pool_t.hpp  spinlock_helpers.hpp  spinlock_t.hpp  vm_pool_t.hpp  vs_pool_t.hpp
example/default/src/x64/: dispatch_vmexit_cpuid.hpp  vm_t.hpp
example/default/src/x64/intel/: dispatch_vmexit.hpp  ept_pdt_t.hpp  ept_pointer_t.hpp  ept_pt_t.hpp  ept_t.hpp  gs_initialize.hpp  gs_t.hpp  l0e_t.hpp  l1e_t.hpp  l2e_t.hpp  l3e_t.hpp  mtrr_t.hpp  pp_t.hpp  second_level_page_table_helpers.hpp  tls_t.hpp  vs_t.hpp
example/default_rust/: Cargo.toml  README.md
example/default_rust/src/: dispatch_fail.rs  lib.rs
example/default_rust/src/x64/: dispatch_vmexit_cpuid.rs  intrinsic_cpuid_impl.rs  intrinsic_t.rs  mtrr_t.rs
example/default_rust/src/x64/intel/: dispatch_vmexit.rs  dispatch_vmexit_ept.rs  dispatch_vmexit_nmi.rs  gs_initialize.rs  gs_t.rs  vs_t.rs
example/default_rust/src/x64/intel/ept/: entry_pdt.rs  ept_entry.rs  ept_pd_2m.rs  ept_pml4.rs  ept_pointer.rs  mod.rs
lib/src/windows/: basic_ioctl_t.hpp
loader/include/: platform.h
loader/src/: start_vmm.c
loader/src/x64/intel/: check_cpu_configuration.c
loader/windows/include/: Driver.h
loader/windows/include/platform_interface/: loader_platform_interface.h  loader_platform_interface.hpp
loader/windows/src/: Driver.c  platform.c
syscall/src/: bf_syscall_impl.rs
