[package]
name = "rust"
version = "1.0.0"
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

[features]
default = ["custom_print_thread_id","GenuineIntel","debug_level_v","release_mode"]
debug_level_v = []
debug_level_vv = []
debug_level_vvv = []
disable_color = []
release_mode = []
AuthenticAMD = []
GenuineIntel = []
custom_print_thread_id = []

[dependencies]
bsl = { path = "../../bsl", features = ["custom_print_thread_id","GenuineIntel","debug_level_v","release_mode"] }
syscall = { path = "../../syscall", features = ["custom_print_thread_id","GenuineIntel","debug_level_v","release_mode"] }
bitfield-struct = "0.3"

# [dependencies.winapi]
# git = "https://github.com/Trantect/winapi-rs.git"
# branch = "feature/km"
# features = ["wdm","ntstatus"]

#libc = "0.2"
#ntapi = { version = "0.4.0", features = ["kernel", "impl-default"] }
#winapi = { version = "0.3.9", features = ["ntdef", "ntstatus", "basetsd", "winnt"] }
#win32api-rs-sys = "0.1.0"